Text - Final - fix indentation

--- a/text/xharmi00-appendices.tex
+++ b/text/xharmi00-appendices.tex
@@ -323,47 +323,47 @@ This appendix lists contents of the attached memory media.
 
 \textbf{The attached memory media particularly contains the following:}
 \begin{itemize}
-    \item 
+    \item
         \texttt{\textbf{/experiments/}}
-        
+
         \begin{itemize}
-            \item 
+            \item
                 The results of the experimental evaluation and experimental
                 programs to analyse.
         \end{itemize}
-        
+
     \item
         \texttt{\textbf{/infer/}}
-        
+
         \begin{itemize}
-            \item 
+            \item
                 Source codes of Facebook Infer.
-                
+
             \item
                 The created source files of the implemented analyser are
                 located mainly in a~subdirectory \texttt{infer/src/checkers}.
-                
+
             \item
-                In this directory, there are \texttt{.md} files with the 
+                In this directory, there are \texttt{.md} files with the
                 official instructions on how to install and build this tool.
-                But such information is primarily provided in 
+                But such information is primarily provided in
                 Appendix~\ref{app:man}.
         \end{itemize}
-        
+
     \item
         \texttt{\textbf{/text/}}
-        
+
         \begin{itemize}
-            \item 
+            \item
                 \LaTeX\ source codes of this thesis.
-            \item 
+            \item
                 It can be compiled into the PDF using \texttt{pdflatex} with
                 the command \texttt{make}.
         \end{itemize}
-        
+
     \item
         \texttt{\textbf{xharmi00.pdf}}
-        
+
         \begin{itemize}
             \item This thesis in the PDF.
         \end{itemize}
@@ -375,10 +375,10 @@ This appendix lists contents of the attached memory media.
 \chapter{Installation and User Manual}
 \label{app:man}
 
-This appendix serves as an installation and user manual. 
+This appendix serves as an installation and user manual.
 
-Further, it is assumed that the \emph{working directory} contains all the 
-files from the attached memory media, see~\ref{app:memMedia}.
+Further, it is assumed that the \emph{working directory} contains all the
+files from the attached memory media, see Appendix~\ref{app:memMedia}.
 
 
 \section*{Installation Manual}
